@@ -3,7 +3,7 @@
 ########################################################################
 # Extension Manager/Repository config file for ext: "rtg_files"
 #
-# Auto generated 14-07-2008 12:59
+# Auto generated 20-07-2008 16:04
 #
 # Manual updates:
 # Only the data in the array - anything else is removed by next write.
@@ -17,11 +17,11 @@ $EM_CONF[$_EXTKEY] = array(
 	'author' => 'Robert Gonda',
 	'author_email' => 'robert.gonda@gmail.com',
 	'shy' => '',
-	'dependencies' => '',
+	'dependencies' => 'cms',
 	'conflicts' => '',
 	'priority' => '',
 	'module' => '',
-	'state' => 'stable',
+	'state' => 'beta',
 	'internal' => '',
 	'uploadfolder' => 1,
 	'createDirs' => '',
@@ -29,16 +29,19 @@ $EM_CONF[$_EXTKEY] = array(
 	'clearCacheOnLoad' => 0,
 	'lockType' => '',
 	'author_company' => 'BSP Magnetica s.r.o.',
-	'version' => '1.3.0',
+	'version' => '1.3.1',
 	'constraints' => array(
 		'depends' => array(
+			'cms' => '',
+			'php' => '5.0.0-0.0.0',
+			'typo3' => '4.0.0-0.0.0',
 		),
 		'conflicts' => array(
 		),
 		'suggests' => array(
 		),
 	),
-	'_md5_values_when_last_written' => 'a:35:{s:9:"ChangeLog";s:4:"1de7";s:10:"README.txt";s:4:"9fa9";s:12:"ext_icon.gif";s:4:"0a6c";s:17:"ext_localconf.php";s:4:"82fa";s:14:"ext_tables.php";s:4:"6e67";s:14:"ext_tables.sql";s:4:"83ce";s:13:"locallang.xml";s:4:"caf4";s:16:"locallang_db.xml";s:4:"58b6";s:7:"tca.php";s:4:"d9ee";s:21:"tx_rtgfiles_files.gif";s:4:"0a6c";s:24:"tx_rtgfiles_files__f.gif";s:4:"887d";s:24:"tx_rtgfiles_files__h.gif";s:4:"f852";s:25:"tx_rtgfiles_files__ht.gif";s:4:"7d92";s:24:"tx_rtgfiles_files__t.gif";s:4:"b893";s:24:"tx_rtgfiles_files__x.gif";s:4:"51ce";s:23:"tx_rtgfiles_systems.gif";s:4:"48c9";s:26:"tx_rtgfiles_systems__f.gif";s:4:"299d";s:26:"tx_rtgfiles_systems__h.gif";s:4:"3421";s:27:"tx_rtgfiles_systems__ht.gif";s:4:"2ebc";s:26:"tx_rtgfiles_systems__t.gif";s:4:"06c3";s:26:"tx_rtgfiles_systems__x.gif";s:4:"3736";s:14:"pi1/ce_wiz.gif";s:4:"02b6";s:29:"pi1/class.tx_rtgfiles_pi1.php";s:4:"7f7c";s:37:"pi1/class.tx_rtgfiles_pi1_wizicon.php";s:4:"1b05";s:13:"pi1/clear.gif";s:4:"cc11";s:19:"pi1/iconfolders.gif";s:4:"a271";s:22:"pi1/iconfoldersact.gif";s:4:"fe80";s:17:"pi1/locallang.xml";s:4:"6243";s:17:"pi1/template.html";s:4:"b058";s:19:"pi1/template_2.html";s:4:"738d";s:24:"pi1/static/editorcfg.txt";s:4:"c099";s:20:"pi1/static/setup.txt";s:4:"2238";s:14:"doc/manual.sxw";s:4:"dbb5";s:19:"doc/wizard_form.dat";s:4:"fe1f";s:20:"doc/wizard_form.html";s:4:"8a2e";}',
+	'_md5_values_when_last_written' => 'a:35:{s:9:"ChangeLog";s:4:"ca7e";s:10:"README.txt";s:4:"9fa9";s:12:"ext_icon.gif";s:4:"0a6c";s:17:"ext_localconf.php";s:4:"82fa";s:14:"ext_tables.php";s:4:"6e67";s:14:"ext_tables.sql";s:4:"83ce";s:13:"locallang.xml";s:4:"caf4";s:16:"locallang_db.xml";s:4:"58b6";s:7:"tca.php";s:4:"d9ee";s:21:"tx_rtgfiles_files.gif";s:4:"0a6c";s:24:"tx_rtgfiles_files__f.gif";s:4:"887d";s:24:"tx_rtgfiles_files__h.gif";s:4:"f852";s:25:"tx_rtgfiles_files__ht.gif";s:4:"7d92";s:24:"tx_rtgfiles_files__t.gif";s:4:"b893";s:24:"tx_rtgfiles_files__x.gif";s:4:"51ce";s:23:"tx_rtgfiles_systems.gif";s:4:"48c9";s:26:"tx_rtgfiles_systems__f.gif";s:4:"299d";s:26:"tx_rtgfiles_systems__h.gif";s:4:"3421";s:27:"tx_rtgfiles_systems__ht.gif";s:4:"2ebc";s:26:"tx_rtgfiles_systems__t.gif";s:4:"06c3";s:26:"tx_rtgfiles_systems__x.gif";s:4:"3736";s:14:"pi1/ce_wiz.gif";s:4:"02b6";s:29:"pi1/class.tx_rtgfiles_pi1.php";s:4:"4b93";s:37:"pi1/class.tx_rtgfiles_pi1_wizicon.php";s:4:"1b05";s:13:"pi1/clear.gif";s:4:"cc11";s:19:"pi1/iconfolders.gif";s:4:"a271";s:22:"pi1/iconfoldersact.gif";s:4:"fe80";s:17:"pi1/locallang.xml";s:4:"eb27";s:17:"pi1/template.html";s:4:"b058";s:19:"pi1/template_2.html";s:4:"c2d1";s:24:"pi1/static/editorcfg.txt";s:4:"c099";s:20:"pi1/static/setup.txt";s:4:"1b03";s:14:"doc/manual.sxw";s:4:"0021";s:19:"doc/wizard_form.dat";s:4:"fe1f";s:20:"doc/wizard_form.html";s:4:"8a2e";}',
 	'suggests' => array(
 	),
 );
